ESP32S3: Make an array out of touch_pad (#273)
* ESP32: Make an array out of `touch_pad`

* + esp32s3

* Revert `esp32` changes

--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -155,6 +155,11 @@ RTC_I2C:
       description: I2C command%s register
   _include: ../../../common_patches/int_strip.yaml
 
+RTC_IO:
+  _array:
+    TOUCH_PAD*:
+      name: TOUCH_PAD%s
+
 RTC_CNTL:
   _include: ../../../common_patches/rtc_cntl_int_strip.yaml
 
