C6: Arrayify LP_IO PIN and GPIO registers

--- a/esp32c6/svd/patches/esp32c6.yaml
+++ b/esp32c6/svd/patches/esp32c6.yaml
@@ -236,6 +236,11 @@ LP_I2C0:
     COMD?: {}
   _include: ../../../common_patches/int_strip.yaml
 
+LP_IO:
+  _array:
+    GPIO?: {}
+    PIN?: {}
+
 LP_WDT:
   _modify:
     INT_ST_RTC:
