--- a/esp32s3/Cargo.toml
+++ b/esp32s3/Cargo.toml
@@ -34,7 +34,7 @@ xtensa-lx = "0.9.0"
 defmt = { version = "0.3.8", optional = true }
 
 [features]
-default = ["xtensa-lx/spin"]
+default = []
 rt = []
 impl-register-debug = []
 defmt = ["dep:defmt"]
