--- a/esp32/svd/patches/esp32.yaml
+++ b/esp32/svd/patches/esp32.yaml
@@ -188,3 +188,24 @@ MCPWM0:
     _modify:
       "*":
         access: read-write
+
+TWAI0:
+  CLOCK_DIVIDER:
+    _modify:
+      CD:
+        bitWidth: 3
+      CLOCK_OFF:
+        bitOffset: 3
+    _add:
+      EXT_MODE:
+        access: read-write
+        description: "This bit can be configured under reset mode. 1: Extended mode, compatiable with CAN2.0B; 0: Basic mode"
+        bitOffset: 7
+        bitWidth: 1
+  INT_ENA:
+    _add:
+      BRP_DIV:
+        access: read-write
+        description: "THIS IS NOT AN INTERRUPT. brp_div will prescale BRP by 2. Only available on ESP32 Revision 2 or later. Reserved otherwise"
+        bitOffset: 4
+        bitWidth: 1
