Define reserved bits in `RMT_SYS_CONF_REG` for C6/H2

--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -484,3 +484,12 @@ TWAI0:
 
 ASSIST_DEBUG:
   _include: ../../../common_patches/assist_debug.yaml
+
+RMT:
+  SYS_CONF:
+    _delete:
+      - SCLK_DIV_NUM
+      - SCLK_DIV_A
+      - SCLK_DIV_B
+      - SCLK_SEL
+      - SCLK_ACTIVE
