Align RSA interrupt enable register/field name for S2/S3 with other chips

--- a/esp32s2/svd/patches/esp32s2.yaml
+++ b/esp32s2/svd/patches/esp32s2.yaml
@@ -342,3 +342,13 @@ SYSTIMER:
 
 USB0:
   _include: ../../../common_patches/usb0.yaml
+
+RSA:
+  _modify:
+    INTERRUPT_ENA:
+      name: INT_ENA
+
+  INT_ENA:
+    _modify:
+      INTERRUPT_ENA:
+        name: INT_ENA
