--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -493,3 +493,9 @@ RMT:
       - SCLK_DIV_B
       - SCLK_SEL
       - SCLK_ACTIVE
+
+RSA:
+  INT_CLR:
+    _modify:
+      CLEAR_INTERRUPT:
+        name: INT_CLR
