Make RSA's interrupt clear field R/W

--- a/esp32s2/svd/patches/esp32s2.yaml
+++ b/esp32s2/svd/patches/esp32s2.yaml
@@ -354,6 +354,7 @@ RSA:
     _modify:
       CLEAR_INTERRUPT:
         name: INT_CLR
+        access: read-write
   INT_ENA:
     _modify:
       INTERRUPT_ENA:
