--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -464,6 +464,7 @@ RSA:
     _modify:
       CLEAR_INTERRUPT:
         name: INT_CLR
+        access: read-write
   INT_ENA:
     _modify:
       INTERRUPT_ENA:
