Align TWAI command register field names for C6/H2 with other chips

--- a/esp32c6/svd/patches/esp32c6.yaml
+++ b/esp32c6/svd/patches/esp32c6.yaml
@@ -484,3 +484,9 @@ RSA:
       CLEAR_INTERRUPT:
         name: INT_CLR
         access: read-write
+
+TWAI*:
+  CMD:
+    _modify:
+      SELF_RX_REQUEST:
+        name: SELF_RX_REQ
