--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -500,3 +500,9 @@ RSA:
       CLEAR_INTERRUPT:
         name: INT_CLR
         access: read-write
+
+TWAI*:
+  CMD:
+    _modify:
+      SELF_RX_REQUEST:
+        name: SELF_RX_REQ
