--- a/esp32/svd/patches/esp32-wifi.yaml
+++ b/esp32/svd/patches/esp32-wifi.yaml
@@ -15,6 +15,7 @@ _add:
             size: 0x2000
             usage: registers
         registers:
+
             RX_CTRL:
                 description: Controls the reception of frames
                 addressOffset: 0x84
@@ -28,23 +29,64 @@ _add:
                         bitOffset: 31
                         bitWidth: 1
                         description: Enable frame reception
+
             RX_DESCR_BASE:
                 description: base address of the RX DMA list
                 addressOffset: 0x88
                 acccess: read-write
+
             RX_DESCR_NEXT:
                 description: next item in the RX DMA list
                 addressOffset: 0x8c
                 access: read-write
+
             RX_DESCR_LAST:
                 description: last item in RX DMA list
                 addressOffset: 0x90
                 access: read-write
+
             UNKNOWN_RX_POLICY%s:
                 dim: 2
                 dimIncrement: 4
                 addressOffset: 0xd8
                 access: read-write
+  
+            HW_STAT_ACK_INT:
+                addressOffset: 0x2bc
+                access: read
+
+            HW_STAT_RTS_INT:
+                addressOffset: 0x2c0
+                access: read
+
+            HW_STAT_CTS_INT:
+                addressOffset: 0x2c4
+                access: read
+
+            HW_STAT_RIFS_INT:
+                addressOffset: 0x2c8
+                access: read
+
+            HW_STAT_RX_SUCCESS:
+                addressOffset: 0x2cc
+                access: read
+
+            HW_STAT_RX_END:
+                addressOffset: 0x2d0
+                access: read
+            
+            HW_STAT_HOP_ERR:
+                addressOffset: 0x2d8
+                access: read
+            
+            HW_STAT_FULL2:
+                addressOffset: 0x2dc
+                access: read
+
+            HW_STAT_BLOCK_ERR:
+                addressOffset: 0x2e0
+                access: read
+            
             WIFI_INT_STATUS:
                 description: Interrupt status of WIFI peripheral
                 addressOffset: 0xc48
@@ -62,14 +104,17 @@ _add:
                         description: Indicates a timeout, while transmitting
                         bitOffset: 19
                         bitWidth: 1
+
             WIFI_INT_CLEAR:
                 description: Interrupt status clear of WIFI peripheral
                 addressOffset: 0xc4c
                 access: write
+
             CTRL:
                 description: Exact name and meaning unknown, used for initializing the MAC
                 addressOffset: 0xcb8
                 access: read-write
+
             TX_ERROR_CLEAR:
                 description:  Clear the error status of a slot
                 addressOffset: 0xcbc
@@ -81,6 +126,7 @@ _add:
                     SLOT_TIMEOUT:
                         bitOffset: 0x10
                         bitWidth: 5
+
             TX_ERROR_STATUS:
                 description: Error status of a slot
                 addressOffset: 0xcc0
@@ -92,6 +138,7 @@ _add:
                     SLOT_TIMEOUT:
                         bitOffset: 0x10
                         bitWidth: 5
+
             TX_COMPLETE_CLEAR:
                 description: Clear the completion status of a slot
                 addressOffset: 0xcc4
@@ -100,6 +147,7 @@ _add:
                     SLOTS:
                         bitOffset: 0
                         bitWidth: 5
+
             TX_COMPLETE_STATUS:
                 description: Completion status of a slot
                 addressOffset: 0xcc8
@@ -108,6 +156,35 @@ _add:
                     SLOTS:
                         bitOffset: 0
                         bitWidth: 5
+
+            HW_STAT_TX_RTS:
+                addressOffset: 0xd58
+                access: read
+
+            HW_STAT_TX_CTS:
+                addressOffset: 0xd5c
+                access: read
+
+            HW_STAT_TX_ACK:
+                addressOffset: 0xd60
+                access: read
+
+            HW_STAT_TRCTS:
+                addressOffset: 0xd64
+                access: read
+
+            HW_STAT_TRIGGER:
+                addressOffset: 0xd68
+                access: read
+
+            HW_STAT_TX_HUNG:
+                addressOffset: 0xd6c
+                access: read
+
+            HW_STAT_PANIC:
+                addressOffset: 0xd70
+                access: read
+
 WIFI:
     _add:
         _clusters:
