Align TWAI register field for ESP32-C6/H2

--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -506,3 +506,8 @@ TWAI*:
     _modify:
       SELF_RX_REQUEST:
         name: SELF_RX_REQ
+
+  ERR_CODE_CAP:
+    _modify:
+      ERR_CAPTURE_CODE_DIRECTION:
+        name: ECC_DIRECTION
