--- a/esp32/svd/patches/esp32.yaml
+++ b/esp32/svd/patches/esp32.yaml
@@ -4,6 +4,22 @@ I2C0:
   _modify:
     INT_STATUS:
       name: INT_ST
+  INT_ENA:
+    _modify:
+      ACK_ERR_INT_ENA:
+        name: NACK_INT_ENA
+  INT_RAW:
+    _modify:
+      ACK_ERR_INT_RAW:
+        name: NACK_INT_RAW
+  INT_CLR:
+    _modify:
+      ACK_ERR_INT_CLR:
+        name: NACK_INT_CLR
+  INT_ST:
+    _modify:
+      ACK_ERR_INT_ST:
+        name: NACK_INT_ST
   _include:
     - ../../../common_patches/i2c0.yaml
     - ../../../common_patches/i2c_opcode.yaml
