--- a/esp32c6/Cargo.toml
+++ b/esp32c6/Cargo.toml
@@ -31,6 +31,8 @@ test = false
 critical-section = { version = "1.1.3", optional = true }
 vcell = "0.1.3"
 defmt = { version = "0.3.8", optional = true }
+riscv = "0.12.1"
+riscv-peripheral = "0.2.0"
 
 [features]
 default = []
