INT_CLR: Write 1 to clear

--- a/esp32s2/svd/patches/copy_dma.yaml
+++ b/esp32s2/svd/patches/copy_dma.yaml
@@ -428,3 +428,7 @@ COPY_DMA:
     CLK_EN:
       FORCE: [1, "Force clock on for register"]
       ON_WRITE: [0, "Support clock only when application writes registers"]
+  INT_CLR:
+    _modify:
+      "*":
+        modifiedWriteValues: oneToClear
