--- a/esp32h2/Cargo.toml
+++ b/esp32h2/Cargo.toml
@@ -28,12 +28,14 @@ bench = false
 test = false
 
 [dependencies]
-critical-section = { version = "1.1.3", optional = true }
-vcell = "0.1.3"
-defmt = { version = "0.3.8", optional = true }
+critical-section = { version = "1.2.0", optional = true }
+defmt            = { version = "0.3.8", optional = true }
+riscv            = "0.12.1"
+riscv-peripheral = "0.2.0"
+vcell            = "0.1.3"
 
 [features]
-default = []
-rt = []
+default             = []
+defmt               = ["dep:defmt"]
 impl-register-debug = []
-defmt = ["dep:defmt"]
+rt                  = []
